--- a/style.css
+++ b/style.css
@@ -61,3 +61,17 @@ form button {
     margin: 5rem auto 100px;
     display: none;
 }
+
+#search__result {
+    width: 80%;
+    margin: 100px auto 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 40px;
+}
+#search__result img {
+    width: 100%;
+    height: 230px;
+    object-fit: cover;
+    border-radius: 5px;
+}
